# Council

./: .replit  agent_simulator.py  app.py  auth.py  flask_app.py  main.py  models.py  pyproject.toml
agents/: __init__.py  agent_manager.py  api_key_routes.py  base_agent.py  claude_agent.py  gpt_agent.py  grok_agent.py  real_agent_runner.py  routes.py
attached_assets/: Pasted-Here-s-the-full-set-of-Replit-prompts-in-one-clean-copy-paste-message-for-you-to-feed-in-sequentiall-1747742781722.txt
static/css/: custom.css
static/js/: main.js  real_agents.js
templates/: index.html  real_agents.html
